test/ui/test/packages/syntactically-invalid-manifests/duplicate-entries/package.stderr
error[E803]: the entry ‘hey’ is defined multiple times
 --> ${TEST_FOLDER}/packages/syntactically-invalid-manifests/duplicate-entries/package.metadata:3:1
  |
3 | hey: "it's me",
  | --- previous definition
  |
 --> ${TEST_FOLDER}/packages/syntactically-invalid-manifests/duplicate-entries/package.metadata:4:1
  |
4 | hey: "it's me again",
  | ^^^ redefinition
  |

error: found ‘,’ but expected record key
 --> ${TEST_FOLDER}/packages/syntactically-invalid-manifests/duplicate-entries/package.metadata:6:9
  |
6 | more: { , "
  |         ^
  |

error: aborting due to 2 previous errors

